--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
 doc
 
 
-*.pyc
-*__pycache__
+######################################################
+#
+# Winsync Repo
+#
+######################################################
 *.key
 *.ini
 files
@@ -12,13 +15,63 @@ packages
 profiles.ini
 keys
 
+######################################################
+#
+# Winsync
+#
+######################################################
 config.ini
 *.zip
 *.tar.gz
 var
 
 
+######################################################
+#
+# WinsyncLoader
+#
+######################################################
 Debug
 Release
 
+######################################################
+#
+# Standard Python ignores
+#
+######################################################
 
+*.py[cod]
+
+# C extensions
+*.so
+
+# Packages
+*.egg
+*.egg-info
+dist
+build
+eggs
+parts
+bin
+var
+sdist
+develop-eggs
+.installed.cfg
+lib
+lib64
+
+# Installer logs
+pip-log.txt
+
+# Unit test / coverage reports
+.coverage
+.tox
+nosetests.xml
+
+# Translations
+*.mo
+
+# Mr Developer
+.mr.developer.cfg
+.project
+.pydevproject
